--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
-<div>Teachable Machine Image Model</div>
-<button type="button" onclick="init()">Start</button>
-<div id="webcam-container"></div>
-<div id="label-container"></div>
+<head>
+   <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<div class="container">
+   <div class="info">
+       <h1>Teachable Machine Image Model</h1>
+       <button type="button" onclick="init()">Start</button>
+       <br>
+       <div id="webcam-container"></div>
+       <div id="label-container"></div>
+   </div>
+</div>
+</body>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 <script type="text/javascript">
